syntax = "proto3";
package content;
import "content/moment.enum.proto";
import "content/moment.model.proto";
import "content/common.model.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "github.com/mwitkow/go-proto-validators/validator.proto";
import "google/api/annotations.proto";
import "utils/request/empty.proto";
import "utils/response/response.proto";
import "utils/proto/gogo/graphql.proto";
import "utils/oauth/oauth.proto";
import "utils/proto/go/go.proto";

option java_package = "xyz.hoper.protobuf.content";
option go_package = "github.com/liov/hoper/go/v2/protobuf/content";
option (go.file) = {non_omitempty:true};

service ActionService {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_tag) = {
    description: "动作相关接口"
  };

}
